style.css
/* CSS VARIABLES */
:root {
  --dark: hsl(227, 54%, 16%);
  --light: hsl(0, 0%, 100%);
  --player1: hsl(261, 96%, 83%);
  --light-pink: hsl(350, 79%, 89%);
  --yellow: hsl(50, 100%, 49%);
  --player2: hsl(202, 100%, 70%);
  --robot: hsl(0, 100%, 58%);
  --enemy: hsl(0, 100%, 100%);
  --easy: hsl(104, 100%, 53%);
  --mid: hsl(29, 100%, 58%);
  --hard: hsl(0, 100%, 40%);
}

/* FONT IMPORTS */
@font-face {
  font-family: 'GrilledCheese BTN Regular';
  font-weight: normal;
  font-style: normal;
  src: local('GrilledCheese BTN Regular'),
    url('fonts/GrilledCheeseBTNRegular.woff') format('woff');
}

/* RESET */
* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

/* UTILITY CLASSES */
.text-stroke {
  text-shadow: -0.1em 0 0.06em var(--dark), 0.1em 0 0.06em var(--dark),
    0 0.1em 0.06em var(--dark), 0 -0.1em 0.06em var(--dark),
    -0.1em 0.1em 0.06em var(--dark), 0.1em 0.1em 0.06em var(--dark),
    -0.1em -0.1em 0.06em var(--dark), 0.1em -0.1em 0.06em var(--dark);
}

.animate-fadein {
  opacity: 1;
  animation: 0.2s ease-in-out fadein;
}

@keyframes fadein {
  0% {
    visibility: hidden;
    opacity: 0;
  }

  100% {
    visibility: visible;
    opacity: 1;
  }
}

.animate-bob:hover,
.animate-bob-turn,
.animate-bob-auto:placeholder-shown {
  animation: 0.75s ease-in-out infinite bob;
}

@keyframes bob {
  0% {
    transform: translateY(0);
  }

  50% {
    transform: translateY(-0.5rem);
  }

  100% {
    transform: translateY(0);
  }
}

.animate-scale:hover {
  border-color: var(--dark-soft);
  animation: 0.5s ease-in-out infinite scale;
}

@keyframes scale {
  0% {
    transform: translateY(0);
  }

  50% {
    transform: scale(1.05);
  }

  100% {
    transform: translateY(0);
  }
}

.animate-grayscale {
  transition: 0.25s ease-in-out filter;
  filter: grayscale(90%);
}

.animate-grayscale:hover {
  filter: none;
}

/* GENERAL STYLES */
body {
  background-image: url(svg/symbols-bg.svg),
    linear-gradient(90deg, #f9cbd3 0%, #c6a8fd 100%);
  background-repeat: no-repeat;
  background-size: cover;
  color: var(--dark);
  font-family: 'GrilledCheese BTN Regular';
}

img {
  max-width: 100%;
}

header,
main,
footer,
.card,
.img-holder,
.prematch-player,
.board__square,
.round-result,
.result--controls,
.controls__back,
.controls__next-round,
.controls__reset-score {
  display: flex;
  align-items: center;
  justify-content: center;
}

.game--menu,
.game--pvp,
.game--pve,
.game--board {
  display: none;
  align-content: center;
  justify-content: center;
  justify-items: center;
  row-gap: 2rem;
}

.wrapper {
  display: grid;
  grid-template-rows: min-content auto min-content;
  grid-template-columns: 1fr;
  margin-right: auto;
  margin-left: auto;
  width: 90%;
  max-width: 1440px;
  min-height: 100vh;
}

header,
footer {
  padding: 1.5rem 0;
}

main {
  flex-direction: column;
}

.card {
  border: 4px solid var(--dark);
  border-radius: 2rem;
  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
  background-color: var(--light);
}

.controls__back {
  flex-direction: column;
  cursor: pointer;
  color: var(--yellow);
}

.controls__back .img-holder {
  width: 3rem;
}

.github-icon {
  width: 3rem;
}

/* SCREEN 1: MENU */
.game--menu {
  display: grid;
  cursor: pointer;
  font-size: 2.4rem;
}

.game--menu .img-holder {
  padding: 2rem 0.5rem;
}

.game--menu .img-holder img {
  width: 60%;
}

/* SCREEN 2: PVP-PVE */
.game--pvp,
.game--pve {
  font-size: 1.6rem;
}

.prematch-info {
  display: grid;
  grid-template-columns: 6.5rem auto 6.5rem;
  align-items: center;
  justify-content: center;
  justify-items: center;
  padding: 1rem 2.5rem;
}

.prematch-player {
  flex-direction: column;
}

.prematch-player .img-holder {
  padding: 0.2rem 1rem;
}

.prematch-player .player-symbol {
  width: 80%;
}

.prematch-player input[type='text'] {
  margin: 1.5rem 0;
  outline: none;
  border: none;
  width: 120%;
  text-align: center;
  line-height: calc(100% + 1em);
  font-family: 'GrilledCheese BTN Regular';
  font-size: 1.8rem;
}

.prematch-player input[name='Player 1'] {
  color: var(--player1);
}

.prematch-player input[name='Player 1']::placeholder {
  opacity: 0.5;
  color: var(--player1);
}

.prematch-player input[name='Player 2'] {
  color: var(--player2);
}

.prematch-player input[name='Player 2']::placeholder {
  opacity: 0.5;
  color: var(--player2);
}

.difficulty-selector {
  display: flex;
  grid-column: 1 / 4;
  align-items: center;
  justify-content: space-evenly;
  padding: 1rem 0;
  width: 100%;
  gap: 0px;
}

.difficulty,
.player-info__difficulty {
  border: 4px solid var(--dark);
  border-radius: 1rem;
  cursor: pointer;
  padding: 0.5rem 0.8rem;
  text-align: center;
  text-transform: uppercase;
  color: var(--light);
  font-size: 1rem;
}

.easy {
  background-color: var(--easy);
}

.mid {
  background-color: var(--mid);
}

.hard {
  background-color: var(--hard);
}

.btn-fight {
  grid-column: 1 / 4;
  border: 4px solid var(--dark);
  border-radius: 1.5rem;
  background-color: var(--yellow);
  cursor: pointer;
  padding: 0.3rem 0;
  width: 100%;
  text-align: center;
  font-size: 2.4rem;
}

/* SCREEN 3: BOARD GAME */
.game--board {
  grid-template-columns: 1fr 1fr;
}

.score-desktop {
  display: none;
}

.score {
  justify-self: center;
  padding: 1rem;
  min-width: 120px;
  font-size: 2.2rem;
  gap: 1rem;
}

.score img {
  width: 3rem;
}

.score-p1 {
  color: var(--player1);
}

.score-p2 {
  color: var(--enemy);
}

.score-p1__points,
.score-p2__points {
  text-shadow: -0.06em 0 0.08em var(--dark), 0.06em 0 0.08em var(--dark),
    0 0.06em 0.08em var(--dark), 0 -0.06em 0.08em var(--dark),
    -0.06em 0.06em 0.08em var(--dark), 0.06em 0.06em 0.08em var(--dark),
    -0.06em -0.06em 0.08em var(--dark), 0.06em -0.06em 0.08em var(--dark);
}

.board {
  display: grid;
  position: relative;
  grid-template-rows: repeat(3, 1fr);
  grid-template-columns: repeat(3, 1fr);
  grid-column: 1 / 3;
  align-items: center;
  justify-items: center;
  border: none;
  cursor: pointer;
  width: 75vw;
  height: 75vw;
  gap: 4px;
}

.board img {
  width: 70%;
}

.board__square {
  box-shadow: 0 0 0 4px var(--dark);
  width: 100%;
  height: 100%;
}

.square-0 {
  border-top-left-radius: 2rem;
}

.square-2 {
  border-top-right-radius: 2rem;
}

.square-6 {
  border-bottom-left-radius: 2rem;
}

.square-8 {
  border-bottom-right-radius: 2rem;
}

.round-result {
  display: none;
  position: absolute;
  flex-direction: column;
  border-radius: 2rem;
  box-shadow: 0 0 0 4px var(--dark);
  background-color: hsl(227, 54%, 16%, 0.95);
  width: 100%;
  height: 100%;
  color: var(--light);
  font-size: 3.2rem;
}

.result--winner {
  color: var(--player1);
}

.result--controls {
  grid-column: 1 / 3;
  align-items: flex-end;
  justify-content: space-around;
  width: 100%;
  height: 4.4rem;
  letter-spacing: 0px;
  color: var(--yellow);
  font-size: 1.6rem;
}

.controls__back,
.controls__next-round,
.controls__reset-score {
  flex-direction: column;
  cursor: pointer;
}

.controls__next-round,
.controls__reset-score {
  display: none;
}

.controls__next-round {
  line-height: calc(100% - 0.1em);
  font-size: 2.4rem;
}

/* Medium devices (tablets, 640px and up) */
@media (min-width: 640px) {
  .board {
    width: 25rem;
    height: 25rem;
  }

  .round-result {
    font-size: 4.2rem;
  }
}

/* Extra large devices (large desktops, 1008px and up) */
@media (min-width: 1008px) {
  .game--board {
    grid-template-rows: repeat(2, auto);
    grid-template-columns: repeat(3, auto);
    justify-content: space-evenly;
    width: 100%;
  }

  .board {
    grid-column: initial;
    width: 30rem;
    height: 30rem;
  }

  .result--controls {
    grid-column: 2 / 3;
  }

  .score {
    display: none;
  }

  .score-desktop {
    display: flex;
    flex-direction: column;
    align-self: center;
    gap: 1rem;
  }

  .player-info {
    display: flex;
    flex-direction: column;
    padding: 1rem;
    min-width: 125px;
    font-size: 1.8rem;
  }

  .player-info .img-holder {
    margin-bottom: 0.5rem;
    width: 3.5rem;
  }

  .player-info .player-symbol {
    margin-bottom: 1.5rem;
    width: 2.5rem;
  }

  .score-desktop__points {
    text-align: center;
    font-size: 2.4rem;
  }

  .player-info__diff-difficulty {
    display: none;
  }

  .score-p1__points,
  .score-p2__points {
    text-shadow: inherit;
  }
}

